<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/invitationlayout">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/Hello"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:text="@string/Invitation_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/access_invitation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/invitation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/code"
            android:textColorHint="@color/textColorPrimary"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="35dp"
            android:nextFocusDown="@+id/operatorCode_LOGIN_ET"
            android:singleLine="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="17sp" />

        <Button
            android:id="@+id/validateBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/green_general_button"
            android:text="@string/confirm"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/invitation_code"
            android:textColor="@drawable/text_general" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/invitationlayout"
        android:id="@+id/queuelayout"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/donthave_invite"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:text="@string/queue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:text="@string/your_way"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp" />

        <Button
            android:id="@+id/joinque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/green_general_button"
            android:text="@string/join_queue"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textView6"
            android:textColor="@drawable/text_general" />

        </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/queuelayout"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp" />

        </RelativeLayout>

</RelativeLayout>